--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 This is just a repository of test cases for the Code Audit Feed tagging and such
+
+<script>alert('XSS')</script>
+
+<strong>bold?</strong>
